2006-01-10  Alex Roitman  <shura@gramps-project.org>
	* src/Assistant.py: Cosmeti c changes.
	* src/Exporter.py: Start converting to Assistant.
	* src/ViewManager.py: Add handler for Export; add hot keys for
	import and export.

2006-01-09  Don Allingham  <don@gramps-project.org>
	* relation.svg: Relationship view icon
	* media.svg: Relationship view icon
	* src/ViewManager.py: no background color for sidebar
	* src/gramps_main.py: new icons

2006-01-09 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/ChooseParents.py: replaced DisplayTrace with new logger
	* src/DbPrompter.py: replaced DisplayTrace with new logger
	* src/DisplayModels.py: replaced DisplayTrace with new logger
	* src/EditPlace.py: replaced DisplayTrace with new logger
	* src/EditSource.py: replaced DisplayTrace with new logger
	* src/FamilyView.py: replaced DisplayTrace with new logger
	* src/MapView.py: replaced DisplayTrace with new logger
	* src/Report.py: replaced DisplayTrace with new logger
	* src/StyleEditor.py: replaced DisplayTrace with new logger
	* src/Tool.py: replaced DisplayTrace with new logger
	* src/ViewManager.py: replaced DisplayTrace with new logger
	* src/gramps_main.py: replaced DisplayTrace with new logger
	* src/GrampsLogger/_ErrorReportAssistant.py: added a newline

2006-01-09 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsLogger/_ErrorReportAssistant.py: corrected wording, minor layout 
	changes.

2006-01-09 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/Assistant.py: remove print statement
	* src/GrampsLogger/_ErrorReportAssistant.py: polish UI and added option
	to start email client.
	
2006-01-08  Don Allingham  <don@gramps-project.org>
	* src/person.svg: new icon
	* src/gramps_main.py: add person.svg
	* src/gramps_main.py: Change "Family" title to "Relationships"
	* src/DisplayModels.py: Fix sorting
	* src/FamilyList.py: Fix sorting
	* src/PageView.py: Fix sorting
	* src/GrampsDb/_GrampsDbBase.py: set default column sorting order
